--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pwa-swr-basic",
+  "name": "pwa-swr-idb",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -14,8 +14,10 @@
     "pwa": "yarn build && yarn preview"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.18.0",
     "swr": "^2.2.4",
     "usehooks-ts": "^2.9.1",
     "workbox-window": "^7.0.0"
